Fix tests + javadoc